center the table

--- a/styles/typebase.css
+++ b/styles/typebase.css
@@ -111,7 +111,7 @@ table {
     margin-top: var(--leading);
     border-spacing: 0px;
     border-collapse: collapse;
-    text-align: left;
+    text-align: center;
     width: 100%;
 }
 
